--- a/mis-frontend/public/index.html
+++ b/mis-frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%220%22 fill=%22%239000ff%22></rect><path d=%22M33.36 20.74L40.59 20.74L40.59 45.47Q40.63 51.84 42.64 54.88Q44.65 57.93 49.18 57.93L49.18 57.93Q56.95 57.93 59.38 51.99L59.38 51.99L59.38 20.74L66.64 20.74L66.64 63.01L60.12 63.01L59.77 58.52Q56.13 63.79 49.49 63.79L49.49 63.79Q43.75 63.79 40.59 60.94L40.59 60.94L40.59 79.26L33.36 79.26L33.36 20.74Z%22 fill=%22%23fff%22></path></svg>" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
